[Merton] Branding and accessibility fixes to comply with style guide
- added privacy policy link
- relayed footer links, left-align locatino search box, drop header border
- prevented homepage input focus outline being cut off
- focus outlines for multi-selects and dropzones
- made input.fake-link buttons look like <a> links again
- fixed All Reports:
  - shortlist stars returned to original styling
  - <small> text link underlining has been removed

--- a/web/cobrands/merton/_colours.scss
+++ b/web/cobrands/merton/_colours.scss
@@ -10,6 +10,7 @@ $merton-blue-b1: #056eb6;
 $merton-green-g1: #7bbb58;
 $merton-neutrals-n1: #000000;
 $merton-headline: #333333;
+$merton-dark-green: #0c4c57;
 
 $link-color: #167d63;
 $link-hover-color: $merton-neutrals-n1;
